src/tests/syntax_analysis_error/invalid_boolean_prefix_expression/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_boolean_prefix_expression__test_invalid_boolean_prefix_expression_case_1_lexical_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_boolean_prefix_expression/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "sentence",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: Not,
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 17,
        },
    },
]
