src/tests/syntax_analysis_error/invalid_boolean_prefix_expression/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_boolean_prefix_expression__test_invalid_boolean_prefix_expression_case_1_syntax_analysis_error.snap
---
source: src/tests/syntax_analysis_error/invalid_boolean_prefix_expression/mod.rs
assertion_line: 20
expression: error
---
Err(
    Error {
        context: "A prefix expression must have a right hand expression.",
        source: "Do not know how to parse SemiColon as an expression at line 1, column 17.",
    },
)
